@@ -24,6 +24,7 @@ support in Gnuastro. The list is ordered alphabetically (by first name).
     Alan Lefor                           alefor@astr.tohoku.ac.jp
     Alberto Madrigal                     brt.madrigal@gmail.com
     Alberto Moreno Signes                amoreno@cefca.es
+    Alejandro Camazón Pinilla            acamazon@ufl.edu
     Alejandro Lumbreras Calle            alumbreras@cefca.es
     Alejandro Serrano Borlaff            asborlaff@ucm.es
     Alessandro Ederoclite                aederocl@gmail.com
