@@ -35,6 +35,14 @@ See the end of the file for license conditions.
 ** Changed features
 ** Bugs fixed
 
+  - bug #66216: NaN values in MakeProfile outputs for very small profiles
+    (smaller than a pixel even after accounting for the truncation
+    factor). Reported by Alejandro Camazón Pinilla.
+
+
+
+
+
 * Noteworthy changes in release 0.23 (library 21.0.0) (2024-07-13)
 ** New publications
 
